[gd_scene load_steps=2 format=3 uid="uid://bu2210yvw7asq"]

[ext_resource type="Script" path="res://src/ois/authoring_tool/OISAuthoringTool.gd" id="1_fv4xn"]

[node name="OISAuthoringTool" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fv4xn")

[node name="FDSetMesh" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://src/ois/"
filters = PackedStringArray("*.obj")

[node name="FDSaveObject" type="FileDialog" parent="."]
initial_position = 2
size = Vector2i(500, 400)
root_subfolder = "res://src/ois/"
filters = PackedStringArray("*.tscn")

[node name="FDLoadObject" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(500, 400)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "res://src/ois/"
filters = PackedStringArray("*.tscn")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(250, 100)

[node name="MainContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="LeftHalf" type="FlowContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
vertical = true

[node name="FlowContainer3" type="FlowContainer" parent="MainContainer/LeftHalf"]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16

[node name="BtnNewObject" type="Button" parent="MainContainer/LeftHalf/FlowContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "New Object"

[node name="BtnLoadObject" type="Button" parent="MainContainer/LeftHalf/FlowContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "Load Object"

[node name="SubViewportContainer" type="SubViewportContainer" parent="MainContainer/LeftHalf"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SubViewport" type="SubViewport" parent="MainContainer/LeftHalf/SubViewportContainer"]
handle_input_locally = false
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="MainContainer/LeftHalf/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.81668)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MainContainer/LeftHalf/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3.43387, 0)

[node name="EditableObjectSlot" type="Node3D" parent="MainContainer/LeftHalf/SubViewportContainer/SubViewport"]

[node name="ObjectSettings" type="FlowContainer" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="BtnSetMesh" type="Button" parent="MainContainer/ObjectSettings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Set Mesh"

[node name="BtnSaveObject" type="Button" parent="MainContainer/ObjectSettings"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
text = "Save Object"

[connection signal="file_selected" from="FDSetMesh" to="." method="_on_fd_set_mesh_file_selected"]
[connection signal="file_selected" from="FDSaveObject" to="." method="_on_fd_save_object_file_selected"]
[connection signal="file_selected" from="FDLoadObject" to="." method="_on_fd_load_object_file_selected"]
[connection signal="pressed" from="MainContainer/LeftHalf/FlowContainer3/BtnNewObject" to="." method="_on_btn_new_object_pressed"]
[connection signal="pressed" from="MainContainer/LeftHalf/FlowContainer3/BtnLoadObject" to="." method="_on_btn_load_object_pressed"]
[connection signal="pressed" from="MainContainer/ObjectSettings/BtnSetMesh" to="." method="_on_btn_set_mesh_pressed"]
[connection signal="pressed" from="MainContainer/ObjectSettings/BtnSaveObject" to="." method="_on_btn_save_object_pressed"]
